@@ -15,8 +15,8 @@ DIST Python-2.5.tar.bz2 9357099 RMD160 f6977a6c3d3ca54c27ad9270918237a7e6521d0b 
 DIST python-gentoo-patches-2.4.4-r3.tar.bz2 8348 RMD160 e9b59a7cd1469668d43a41d396d7a275bef78270 SHA1 16373b922895d1c14ccfa9d6b39079f2d5a2bcb6 SHA256 1c81397312136625fc220db660f701d4eccbde75e74bb40a0d77015b4d5d4f9f
 DIST python-gentoo-patches-2.5-r2.tar.bz2 6047 RMD160 b11e1d529486e2ed88bd34e1ebb0cebf6d4e47cc SHA1 1af955b338cdffe4da7cb6416eeeb6e35490e9c5 SHA256 f4c8d4a924f48ab35b3281cceffe7237efef69f3bc5a68c3492d8b21d60813b8
 DIST python-gentoo-patches-2.5.1.tar.bz2 5430 RMD160 7cdfb51c00a49ebb9027228691e10b8c4c3f574f SHA1 435bb50e342555fc6fac79d72a22a88b592a3627 SHA256 065f31d46c3b57d99b1c3236bbaf445ca142fda33c9ef13e7e2e39be3d027499
-EBUILD python-2.4.4-r4.ebuild 10971 RMD160 3f09c5939cbd6a6e35f6d73decaab074dc5ea30f SHA1 6a92f13a5989cb9b011852c1daedaf5534477ba5 SHA256 ee6b14cd2161f2342ffb6cb87b4c3d8c0b8f29573748976d3125a7c79df0b305
+EBUILD python-2.4.4-r4.ebuild 10975 RMD160 444b393cecbaaa491b6b14c2b4a97d6f8d7f914c SHA1 604a8f50b4289ffc88fc677dbdb396bd1608df96 SHA256 801886c731bc18403bb7736079933a44ef987b023f0f03e6d9e707a0fc3a44d1
 EBUILD python-2.5-r2.ebuild 11543 RMD160 6152a2c9d7a80a6d1de2309cd3dac6fff2861c26 SHA1 28ef2c02683bee2c6f59d471eff64aa42b740733 SHA256 4bc8e2c3831b641694e3f7726d3e764c246269207a01896b3abb6c823808a648
 EBUILD python-2.5.1-r2.ebuild 11027 RMD160 8299aece7fc54400f71855fe9c8f155d4d3d4d47 SHA1 aca4833d32d4db11fe43c27d9eabc0dc2175fe15 SHA256 8203080bb8fd5d69f4bc7d789aeae336e477aafccf38493da47b737ee212ac56
-MISC ChangeLog 44599 RMD160 c3cbc0932c808a93ca601800056a4ebd227f3052 SHA1 6de3fc21df31af4d5e272342ca67831aadc96ea9 SHA256 170340885966bcd5560a4909d63763e05c29a4c749488871da49f4ea86ff97af
-MISC metadata.xml 221 RMD160 dd50f32b16d6c15330ae1ee711d8a6cf8f6e3bed SHA1 85903c4affc3a23dd37e4910eb9b198cd02b242e SHA256 c14b93d19008cbeeb3312ec60b97513eef18ccfe82b8e2303cb44977ca13e3bd
+MISC ChangeLog 44920 RMD160 33e1594b1816d4410ebd9d012d3e7b413cfe7551 SHA1 6021e8997df2ccd9fa04648c2ad73e8843fb58af SHA256 1359341de65add36f32557d56889a59b57c6d71446cdc8954721a962bb3e0767
+MISC metadata.xml 220 RMD160 43d608cd89b305dd98825f6cbd9e58bb1bfd9d63 SHA1 9d9bb2e6bbc1e2bc16852ff834b0d55c853a3d94 SHA256 b52472ace9d2775a659c5062ca4a32d31eadd1e63a4c28097f4e599663aac208
